establish ground framework

--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,7 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/sources">Sources</a></li>
               <li><a ng-href="#/">Contact</a></li>
             </ul>
           </div>
@@ -53,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p>Without execution the world would still be an idea.</p>
       </div>
     </div>
 
