clean sass and old stuff

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,7 @@
     <!-- Add your site or application content here -->
     <div class="header">
       <div class="navbar navbar-default" role="navigation">
+      <img id="logo" src="/images/blaues.png" alt="we are blau">
         <div class="container">
           <div class="navbar-header">
 
@@ -32,13 +33,12 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">blaues</a>
+            <a class="navbar-brand" href="#/">blaues boot:</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/sources">Sources</a></li>
               <li><a ng-href="#/">Contact</a></li>
